I have fleshed out the signup form and added a header and footer to the layout. I have also added a main layout file to the views/layouts directory. I created the user model and added the signup controller to handle the signup form submission. added the message model and the message controller skeletons. Tomorrow I will add the message form and the message list to the layout. I will also add the message controller to handle the message form submission.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<h2>Welcome to <%= title %></h2>
+<p>This is the home page.</p>
