--- a/views/secret_form.pug
+++ b/views/secret_form.pug
@@ -1,10 +1,7 @@
 extends layouts/main.pug 
 
 block content
-    if error_messages.length
-        .alert.alert-danger
-        each msg in error_messages
-            p= msg
+   
     div.container
         h1= page_title
         p So you want to become a member do you?
@@ -12,8 +9,12 @@ block content
         img(src="/images/secret3.png" alt="question image")
 
         div
-            form.form-container(action="/user/member" ,method="POST") 
+            form.form-container(action="/user/becomeMember" ,method="POST") 
                 .form-control
-                    label.form-label(for="secretQuestion") What programming concept is displayed in the picture above?
-                    input.form-input(type="text", name="secretQuestion", id="secretQuestion", value=user ? user.secretQuestion : '')
+                    label.form-label(for="answer") What programming concept is displayed in the picture above?
+                    input.form-input(type="text", name="answer", id="answer", value=user ? user.answer : '')
+                    .errors 
+                        if errors
+                            for error in errors
+                                p.error= error.msg 
                 button.btn.btn-primary(type="submit") Submit
