--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -8,7 +8,7 @@ header
       li
         a(href="/user/signup") Sign Up
       li 
-        a(href="/user/members") Become a Member
+        a(href="/user/becomeMember") Become a Member
       if currentUser
         li
           a(href="/user/logout") Log Out
