Fine tuned the app to be more secure and added a  new feature to make a user an admin so they could remove comments if needed.  Finished styling views ,  added in a place on the homepage to view messages and a place to create messages.  switched some console.log statements to use the debug package.  added a readme.md file to the project.

--- a/views/create_message.pug
+++ b/views/create_message.pug
@@ -7,8 +7,12 @@ block content
         form.form-container(method="POST")
             .form-control 
                 label(for="title") Title:
-                input.form-control(type="text", name="title", id="title", required=true)
+                input.form-control(type="text", name="title", id="title", value= message ? message.title : "" required=true)
+                if errors && errors.title 
+                    p.error= errors.title.msg
             .form-control 
                 label(for="message") Message:
-                textarea.form-control(name="message", id="message", required=true)
+                textarea.form-control(name="message", id="message",  required=true)= value= message ? message.message :""
+                if errors && errors.message 
+                    p.error= errors.message.msg
             button.btn.btn-primary(type="submit") Create Message
