--- a/views/secret_form.pug
+++ b/views/secret_form.pug
@@ -16,5 +16,6 @@ block content
                     .errors 
                         if errors
                             for error in errors
-                                p.error= error.msg 
+                                p.error= error.msg
+                            p.hint Hint : It is used in functional programing and was invented by Haskell Curry.        
                 button.btn.btn-primary(type="submit") Submit
