--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,7 +67,48 @@ main {
   gap: 10px;
   color: white;
   text-align: start;
+}
+.message-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: white;
+  text-align: start;
   height: 100%;
+}
+.messages {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: white;
+  text-align: start;
+  height: 100%;
+}
+.message {
+  display: grid;
+  grid-template-rows: auto auto auto;
+  grid-template-columns: 1fr 1fr;
+  background-color: #f9f9f9;
+  padding: 10px;
+  border-radius: 10px;
+  color: black;
+  box-shadow: #333 0 0 20px;
+  gap: 10px;
+}
+.message h3 {
+  display: flex;
+  grid-column: 1 / span 2;
+  justify-content: center;
+  margin: 0px;
+}
+.message-text {
+  grid-column: 1 / span 2;
+  margin: 0px;
+}
+.message-author {
+  grid-row: 3/4;
+  grid-column: 1 / 3;
+  margin: 0px;
 }
 
 .container {
@@ -139,6 +180,10 @@ main {
 .form-input:focus {
   border-color: #007bff;
   outline: none;
+}
+.hint {
+  color: #333;
+  font-size: 0.8rem;
 }
 
 /* Button Styles */
