--- a/views/secret_form.pug
+++ b/views/secret_form.pug
@@ -6,7 +6,7 @@ block content
         h1= page_title
         p So you want to become a member do you?
         
-        img(src="/images/secret3.png" alt="question image")
+        img.secret-image(src="/images/secret3.png" alt="question image")
 
         div
             form.form-container(action="/user/becomeMember" ,method="POST") 
